  Fix focus issue with RDP connections when changing tabs.
  Show changes live as connection tabs are being dragged around to change their order.
  Updated PuTTY to version 0.62.
  Improved error handling when loading connection files.
  Fixed bugs with creating a new connection file.
  A backup of the connection file is saved when it is loaded. The most recent ten backup copies are kept.

1.69 (2011-12-09):
  Fixed issue #66 - Fresh Install Fails to Create Config
  Fixed issue #69 - Connection file gets erased
  Fixed issue #72 - scrollbars added to RDP window after minimize/restore of mRemoteNG
  Disabled automatic updates in the portable edition
  Fixed file name in window title changing when exporting an XML file.
  Fixed Use only Notifications panel checkbox.
  Updated PuTTY to version 0.61
  Binaries are now digitally signed
  Added Credits, License, and Version History items to the Start Menu and made Start Menu item names localizable.

1.68 (2011-07-07):
  Fixed issue #48 - VerifyDatabaseVersion fails with new (empty) database tables.
  Fixed issue #60 - Can't save connections file
  Fixed issue #62 - Connection file error upon launch.

1.67 (2011-06-05):
  Fixed migration of external tools configuration and panel layout from Local to Roaming folder.
  Disable ICA Hotkeys for Citrix connections.  Fixes issue with international users.
  Added a language selection option so users can override the language if they don't want it automatically detected.
  Added partial French translation to the application.
  Addded Thai translation to the installer.
  Updated graphics in the installer to mRemoteNG logo.
  Fixed RD Gateway default properties and RDP reconnection count setting not being saved.
  Fixed bug 33 - IPv6 doesn't work in quick Connect box.
  Moved the items under Tools in the Connections panel context menu up to the top level.
  Added buttons for Add Connection, Add Folder, and Sort Ascending (A-Z) to the Connections panel toolbar.