@@ -1317,6 +1317,9 @@ mRemoteNG wird nun geschlossen und die Installation gestartet.</value>
   <data name="strUseDifferentUsernameAndPassword" xml:space="preserve">
     <value>Anderen Benutzernamen und Passwort verwenden</value>
   </data>
+  <data name="strUseSmartCard" xml:space="preserve">
+    <value>Verwenden einer smart Card</value>
+  </data>
   <data name="strUseSameUsernameAndPassword" xml:space="preserve">
     <value>Selben Benutzer und Passwort verwenden</value>
   </data>
